infrastructure/production/grafana-alloy/namespace.yaml
# infrastructure/production/grafana-alloy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging #${OBSERVAIBILITY_NAMESPACE}
