infrastructure/production/grafana-alloy/ingressroute-patch.yaml
# infrastructure/production/grafana-alloy/ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alloy
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  routes:
    - match: "Host(`alloy.${MAN_DOMAIN}`)"
      kind: Rule
      services:
        - name: grafana-alloy
          port: 12345
